src/mermaid/ascii/journey/snapshots/veol__mermaid__ascii__journey__render__tests__render_ascii_charset.snap
---
source: src/mermaid/ascii/journey/render.rs
expression: render_ascii(src)
---
ASCII Mode

Morning
-------
  Wake up  :| 3 ###.. * Me
  Coffee   :) 5 ##### * Me, Spouse
