src/mermaid/ascii/journey/snapshots/veol__mermaid__ascii__journey__render__tests__render_journey_minimal.snap
---
source: src/mermaid/ascii/journey/render.rs
expression: render(src)
---
S
─
  A  :| 3 ███░░ · Me
