src/mermaid/ascii/journey/snapshots/veol__mermaid__ascii__journey__render__tests__render_long_label.snap
---
source: src/mermaid/ascii/journey/render.rs
expression: render(src)
---
S
─
  A really long label describing the step in detail  :| 3 ███░░ · Me
  Short                                              ☺ 5 █████ · Me
