src/mermaid/ascii/journey/snapshots/veol__mermaid__ascii__journey__render__tests__render_section_with_steps.snap
---
source: src/mermaid/ascii/journey/render.rs
expression: render(src)
---
Morning
───────
  Wake up      :| 3 ███░░ · Me
  Make coffee  ☺ 5 █████ · Me, Spouse
  Read news    ☹ 2 ██░░░ · Me
