src/mermaid/ascii/journey/snapshots/veol__mermaid__ascii__journey__render__tests__render_step_high_score_smile.snap
---
source: src/mermaid/ascii/journey/render.rs
expression: render(src)
---
S
─
  Great  ☺ 5 █████ · Me
