src/mermaid/ascii/journey/snapshots/veol__mermaid__ascii__journey__render__tests__render_step_low_score_frown.snap
---
source: src/mermaid/ascii/journey/render.rs
expression: render(src)
---
S
─
  Awful  ☹ 1 █░░░░ · Me
