src/mermaid/ascii/journey/snapshots/veol__mermaid__ascii__journey__render__tests__render_step_multi_actors.snap
---
source: src/mermaid/ascii/journey/render.rs
expression: render(src)
---
S
─
  Pair  ☺ 4 ████░ · Alice, Bob, Carol
