src/mermaid/ascii/journey/snapshots/veol__mermaid__ascii__journey__render__tests__render_two_sections.snap
---
source: src/mermaid/ascii/journey/render.rs
expression: render(src)
---
My Workday

Morning
───────
  Wake up      :| 3 ███░░ · Me
  Make coffee  ☺ 5 █████ · Me, Spouse

Work
────
  Commute  ☹ 1 █░░░░ · Me
  Code     ☺ 5 █████ · Me, Boss
