src/mermaid/ascii/journey/snapshots/veol__mermaid__ascii__journey__render__tests__render_with_title.snap
---
source: src/mermaid/ascii/journey/render.rs
expression: render(src)
---
My Workday

Morning
───────
  Wake up  :| 3 ███░░ · Me
